Use windows.confirm dialog instead of OO.ui.confirm
Change-Id: I3c78c44c627c4f704d4a19177622d892303371c7

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,7 +3,5 @@
 		"authors": []
 	},
 	"externallinkconfirm-desc": "This extension requires users to confirm after clicking an external link, before being sent to the external site",
-	"externallinkconfirm-confirmation-message": "You are opening an external site. Please confirm.",
-	"externallinkconfirm-confirmation-accept": "Confirm",
-	"externallinkconfirm-confirmation-reject": "Cancel"
+	"externallinkconfirm-confirmation-message": "You are opening an external site. Please confirm."
 }
